[gd_scene load_steps=9 format=3 uid="uid://b2bvmiprqglxd"]

[ext_resource type="Script" uid="uid://b5omgl7d1jq0t" path="res://scenes/game/relic_trapdoor.gd" id="1_xkh2j"]
[ext_resource type="Texture2D" uid="uid://b5bm0p8ob4p0x" path="res://sprites/relic_closed_trapdoor.png" id="2_8uvtx"]
[ext_resource type="Texture2D" uid="uid://bwxec30g65r4v" path="res://sprites/relic_half_open_trapdoor.png" id="3_lj7cp"]
[ext_resource type="Texture2D" uid="uid://d1ifnvjxcjf5y" path="res://sprites/relic_open_trapdoor.png" id="4_8i37l"]
[ext_resource type="AudioStream" uid="uid://cpxds8qgjwxy8" path="res://sounds/boss_trapdoor_opening.wav" id="5_tdc7k"]
[ext_resource type="AudioStream" uid="uid://oq6xoxxvovf1" path="res://sounds/boss_trapdoor_open.wav" id="6_f6k4u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ectj7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8uvtx")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lj7cp")
}],
"loop": true,
"name": &"half_open",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8i37l")
}],
"loop": true,
"name": &"open",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28m6j"]
size = Vector2(128, 128)

[node name="RelicTrapdoor" type="Node2D"]
z_index = -5
script = ExtResource("1_xkh2j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ectj7")
animation = &"half_open"
autoplay = "closed"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_28m6j")
disabled = true

[node name="OpeningTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="OpenTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="OpeningSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tdc7k")
volume_db = 15.0

[node name="OpenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_f6k4u")
volume_db = 10.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="OpenTimer" to="." method="_on_open_timer_timeout"]
